maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:5: error: identifier expected but integer literal found.
  val xBis,yBis = trouverBiscuit()[0],trouverBiscuit()[1]
                                   ^ShortestPathMaze:8: error: ']' expected but '}' found.
}
^ShortestPathMaze:10: error: identifier expected but integer literal found.
def trouverBiscuit():Int[2] = {
                         ^ShortestPathMaze:16: error: ']' expected but ';' found.
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^