maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  val L:Int=getMondeLargeur()
  val H:Int=getMondeHauteur()
  val xBis,yBis = trouverBiscuit()[0],trouverBiscuit()[1]
  
    // Your code here
}

def trouverBiscuit():Int[2] = {
  return [1,2]
}